--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Mothers Heart</title>
+    <title>Home - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/css/Hero-Carousel-images.css">
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="shadow d-flex justify-content-center align-items-center me-2 bs-icon" style="width: 50px;height: 32px;background: url(&quot;assets/img/tiny.jpg&quot;);padding-bottom: 0px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span class="shadow d-flex justify-content-center align-items-center me-2 bs-icon" style="width: 50px;height: 32px;background: url(&quot;assets/img/tiny.jpg&quot;);padding-bottom: 0px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html"><strong>Home</strong></a></li>
@@ -21,7 +21,7 @@
                     <li class="nav-item"><a class="nav-link" href="contacts.html"><strong>Contacts</strong></a></li>
                     <li class="nav-item"></li>
                     <li class="nav-item"></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Partnership</a>
+                </ul><a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSfFFkjrDA4pDaop_q-ecj1VSagbFDwlGn-ED8NyRieP8no-yQ/viewform?usp=sf_link">Partnership</a>
             </div>
         </div>
     </nav>
@@ -35,7 +35,7 @@
                         <p class="my-3">A charitable organization aimed at helping vulnerable children especially the girl child.</p>
                         <form class="d-flex justify-content-center flex-wrap justify-content-md-start flex-lg-nowrap" method="post">
                             <div class="my-2 me-2"></div>
-                            <div class="my-2"></div>
+                            <div class="my-2"></div><a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSfFFkjrDA4pDaop_q-ecj1VSagbFDwlGn-ED8NyRieP8no-yQ/viewform">Membership</a>
                         </form>
                     </div>
                 </div>
@@ -56,10 +56,10 @@
                             <div class="col-md-6">
                                 <div class="text-white p-4 p-md-5"><a href="projects.html" style="font-size: 30px;"><strong><span style="color: rgb(239, 240, 241);">RECENT EVENTS</span></strong><br></a>
                                     <p class="mb-4">Highlights of the Kapisha Outreach in Chingola in 29th March, 2024.</p>
-                                    <div class="my-3"></div><img src="assets/img/IMG-20240331-WA0000.jpg" width="502" height="332" style="width: 490px;height: 390px;">
+                                    <div class="my-3"></div><img src="assets/img/IMG-20240331-WA0000.jpg" width="502" height="320" style="width: 490px;height: 360px;">
                                 </div>
                             </div>
-                            <div class="col-md-6 order-first order-md-last" style="min-height: 250px;"><img src="assets/img/IMG-20240331-WA0010.jpg" style="width: 540px;height: 410px;" width="560" height="480"></div>
+                            <div class="col-md-6 order-first order-md-last" style="min-height: 250px;"><img src="assets/img/IMG-20240331-WA0010.jpg" style="width: 540px;height: 410px;" width="560" height="480"><img src="assets/img/hero2.jpg" style="width: 190px;height: 150px;padding-left: 3px;margin-top: 19px;margin-left: 31px;"><img src="assets/img/IMG-20240331-WA0014.jpg" style="width: 190px;height: 150px;margin-right: 251px;padding-left: 0px;padding-right: 0px;margin-top: -172px;margin-left: 257px;padding-top: 0px;"></div>
                         </div>
                     </div>
                 </div>
@@ -73,8 +73,8 @@
                             <div class="col-md-6">
                                 <div class="text-white p-4 p-md-5">
                                     <h2 class="fw-bold text-white mb-3">Partner with us and get involved in someone's wellbeing&nbsp;</h2>
-                                    <p class="mb-4">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p>
-                                    <div class="my-3"></div><img src="assets/img/exec2.jpg" width="502" height="332">
+                                    <p class="mb-4">It starts with you and I, together we can.</p>
+                                    <div class="my-3"></div><img src="assets/img/exec2.jpg" width="502" height="332"><img src="assets/img/IMG-20230916-WA0057.jpg" style="width: 155px;height: 150px;margin-top: 18px;"><img src="assets/img/IMG-20230916-WA0087.jpg" style="width: 155px;height: 150px;padding-right: 0px;margin-right: 3px;padding-left: 0px;margin-left: 45px;margin-top: 20px;">
                                 </div>
                             </div>
                             <div class="col-md-6 order-first order-md-last" style="min-height: 250px;"><img class="w-100 h-100 fit-cover" src="assets/img/project2.jpg" width="348" height="705"></div>
