--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="shadow d-flex justify-content-center align-items-center me-2 bs-icon" style="width: 50px;height: 32px;background: url(&quot;assets/img/tiny.jpg&quot;);padding-bottom: 0px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span class="shadow d-flex justify-content-center align-items-center me-2 bs-icon" style="width: 50px;height: 32px;background: url(&quot;assets/img/tiny.jpg&quot;);padding-bottom: 0px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html"><strong>Home</strong></a></li>
@@ -21,7 +21,7 @@
                     <li class="nav-item"><a class="nav-link" href="contacts.html"><strong>Contacts</strong></a></li>
                     <li class="nav-item"></li>
                     <li class="nav-item"></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Partnership</a>
+                </ul><a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSfFFkjrDA4pDaop_q-ecj1VSagbFDwlGn-ED8NyRieP8no-yQ/viewform?usp=sf_link">Partnership</a>
             </div>
         </div>
     </nav>
@@ -49,14 +49,6 @@
         </div>
     </section>
     <footer class="bg-primary-gradient">
-        <div class="container py-4 py-xl-5" style="margin-bottom: -38px;">
-            <div class="row mb-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h2><strong><span style="text-decoration: underline;">Upcoming Projects and Outreach Events</span></strong></h2>
-                    <p class="w-lg-50">Partner with us to make the outreach project a success&nbsp;</p>
-                </div>
-            </div>
-        </div>
         <div class="container py-4 py-xl-5">
             <div class="row gy-4 gy-md-0">
                 <div class="col-md-6">
@@ -65,7 +57,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-center">
                     <div style="max-width: 350px;">
                         <h2 class="text-uppercase fw-bold">kapisha menstrual hygiene project</h2>
-                        <p class="my-3">Project was headed by Mothers Heart Foundation Project Coordinator For Chingola&nbsp; &nbsp; &nbsp; &nbsp; Foster Chisenga.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Donate</a>
+                        <p class="my-3">Project was headed by Mothers Heart Foundation Project Coordinator For Chingola&nbsp; &nbsp; &nbsp; &nbsp; <strong>Foster Chisenga.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Donate</a>
                     </div>
                 </div>
             </div>
@@ -77,8 +69,8 @@
                 </div>
                 <div class="col-md-6 d-md-flex align-items-md-center">
                     <div style="max-width: 350px;">
-                        <h2 class="text-uppercase fw-bold">Biben dum<br>fringi dictum, augue purus</h2>
-                        <p class="my-3">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Donate</a>
+                        <h2 class="text-uppercase fw-bold">upcoming events</h2>
+                        <p class="my-3">Details incoming ...</p><a class="btn btn-primary btn-lg me-2" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSfFFkjrDA4pDaop_q-ecj1VSagbFDwlGn-ED8NyRieP8no-yQ/viewform?usp=sf_link">Donate</a>
                     </div>
                 </div>
             </div>
