--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>MHF Home</title>
+    <title>Mothers Heart Foundation</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/css/Hero-Carousel-images.css">
@@ -74,7 +74,7 @@
                                 <div class="text-white p-4 p-md-5">
                                     <h2 class="fw-bold text-white mb-3">Partner with us and get involved in someone's wellbeing&nbsp;</h2>
                                     <p class="mb-4">It starts with you and I, together we can.</p>
-                                    <div class="my-3"></div><img src="assets/img/exec2.jpg" width="502" height="332"><img src="assets/img/IMG-20230916-WA0057.jpg" style="width: 155px;height: 150px;margin-top: 18px;"><img src="assets/img/IMG-20230916-WA0087.jpg" style="width: 155px;height: 150px;padding-right: 0px;margin-right: 3px;padding-left: 0px;margin-left: 45px;margin-top: 20px;">
+                                    <div class="my-3"></div><img src="assets/img/exec2.jpg" width="502" height="332"><img src="assets/img/IMG-20230916-WA0057.jpg" style="width: 230px;height: 190px;margin-top: 18px;"><img src="assets/img/IMG-20230916-WA0087.jpg" style="width: 200px;height: 190px;padding-right: 0px;margin-right: 3px;padding-left: 0px;margin-left: 25px;margin-top: 20px;">
                                 </div>
                             </div>
                             <div class="col-md-6 order-first order-md-last" style="min-height: 250px;"><img class="w-100 h-100 fit-cover" src="assets/img/project2.jpg" width="348" height="705"></div>
@@ -105,7 +105,7 @@
                                 <h6 class="fw-bold mb-0">Phone</h6>
                                 <p class="text-muted mb-0">+260 971455796</p>
                                 <p class="text-muted mb-0">+260 971455796</p>
-                                <p class="text-muted mb-0">+260 972353523</p>
+                                <p class="text-muted mb-0">+260 779564298</p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center p-3">
@@ -135,8 +135,8 @@
         <footer class="text-center bg-dark">
             <div class="container text-white py-4 py-lg-5">
                 <ul class="list-inline">
-                    <li class="list-inline-item me-4"><a class="link-light" href="#"><strong>Contact</strong></a></li>
-                    <li class="list-inline-item me-4"><a class="link-light" href="#"><strong>Partnership</strong></a></li>
+                    <li class="list-inline-item me-4"><a class="link-light" href="contacts.html"><strong>Contact</strong></a></li>
+                    <li class="list-inline-item me-4"><a class="link-light" href="https://docs.google.com/forms/d/e/1FAIpQLSfFFkjrDA4pDaop_q-ecj1VSagbFDwlGn-ED8NyRieP8no-yQ/viewform?usp=sf_link"><strong>Partnership</strong></a></li>
                     <li class="list-inline-item"><a class="link-light" href="team.html"><strong>MHF Team</strong></a></li>
                 </ul>
                 <ul class="list-inline">
