--- a/contacts.html
+++ b/contacts.html
@@ -53,7 +53,7 @@
                                 <h6 class="fw-bold mb-0">Phone</h6>
                                 <p class="text-muted mb-0">+260 971455796</p>
                                 <p class="text-muted mb-0">+260 972353523</p>
-                                <!--<p class="text-muted mb-0">+1234</p>-->
+                                <p class="text-muted mb-0">+260 779564298</p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center p-3">
