--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="fw-bold mb-0">Physical Address</h6>
-                                <p class="text-muted mb-0">9 Jublilee Court</p>
+                                <p class="text-muted mb-0">9 Jubilee Court Chikwa Road long Acres, Lusaka.</p>
                             </div>
                         </div>
                     </div>
