--- a/contacts.html
+++ b/contacts.html
@@ -71,7 +71,7 @@
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="fw-bold mb-0">Location</h6>
-                                <p class="text-muted mb-0">9 Jublilee Court&nbsp;</p>
+                                <p class="text-muted mb-0">9 Jubilee Court Chikwa Road long Acres &nbsp;</p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center p-3">
