--- a/MothersHeartOrphanage.html
+++ b/MothersHeartOrphanage.html
@@ -24,26 +24,51 @@
             </div>
         </div>
     </nav>
- 
     <header class="bg-primary-gradient">
         <div class="container py-5">
             <div class="row py-5">
                 <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-end mb-4">
                     <div style="max-width: 450px;">
                         <p class="fw-bold text-success mb-2">~ Together we can ~</p>
-                        <h2 class="fw-bold">Upcoming Events &nbsp;</h2>
+                        <h2 class="fw-bold">Mothers Foundation Orphanage &nbsp;</h2>
                         <p class="my-3">Mothers Heart Foundation Presents its First ever Dual Outreach project </p>
                         <form class="d-flex justify-content-center flex-wrap justify-content-md-start flex-lg-nowrap" method="post">
-                            <p style="font-size:20px; color:blue"><a href="#">Read more</p>
+                            <div class=s"my-2"></div><a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSfFFkjrDA4pDaop_q-ecj1VSagbFDwlGn-ED8NyRieP8no-yQ/viewform">Partnership</a>
                        </form>
                     </div>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;"><img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/poster3.jpeg" width="240" height="300"></div>
+                    <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;"><img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/children3.jpeg" width="240" height="300"></div>
                 </div>
             </div>
+            <br>
+            <center>
+            <h1 style="color: black;">Highlights</h1>
+            <br>
+            <div class="col-md-6 mb-4">
+                <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;"><img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/children5.jpeg" width="240" height="300"></div>
+            </div>
+            <br>
+            <div class="col-md-6 mb-4">
+                <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;"><img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/children7.jpeg" width="240" height="300"></div>
+            </div>
+            <br>
+            <div class="col-md-6 mb-4">
+                <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;"><img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/c1.jpeg" width="240" height="300"></div>
+            </div>
+            <br>
+            <div class="col-md-6 mb-4">
+                <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;"><img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/project2.jpg" width="240" height="300"></div>
+            </div>
+            <br>
+            <div class="col-md-6 mb-4">
+                <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;"><img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/children3.jpeg" width="240" height="300"></div>
+            </div>
+            </center>
+        </div>
         </div>
     </header>
+
     <section class="py-5">
         <div class="container">
             <div class="row mb-5">
@@ -53,7 +78,7 @@
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
-                <div class="col-md-5"><img src="assets/img/project3.jpg" style="margin-left: -121px;padding-left: 120px;" width="424" height="245"></div>
+                <div class="col-md-5"><img src="assets/img/oph-img.jpeg" style="padding-left: 5px;" width="100%" height="100%"></div>
                 <div class="col-md-4 col-xl-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="d-flex flex-wrap flex-md-column justify-content-md-start align-items-md-start h-100">
                         <div class="d-flex align-items-center p-3">
@@ -61,6 +86,7 @@
                                     <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"></path>
                                 </svg></div>
                             <div class="px-2">
+                                <strong><p style="font-size:25px;">Our Contact MHF through:</p> </strong>
                                 <h6 class="fw-bold mb-0">Phone</h6>
                                 <p class="text-muted mb-0">+260 971455796</p>
                                 <p class="text-muted mb-0">+260 971455796</p>
