--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
                     <div style="max-width: 450px;">
                         <p class="fw-bold text-success mb-2">~ Together we can ~</p>
                         <h2 class="fw-bold">Mothers Heart Foundation&nbsp;</h2>
-                        <p class="my-3">A charitable organization aimed at helping vulnerable children especially the girl child.</p>
+                        <p class="my-3">A charitable organization aimed at helping vulnerable children especially the girl child. </p>
+                        <a href="MotherHeartOrphanage.html"><p class="fw-bold text-success mb-2">Click to view Mothers Heart Foundation Orphanage</p> </a>
                         <form class="d-flex justify-content-center flex-wrap justify-content-md-start flex-lg-nowrap" method="post">
                             <div class="my-2 me-2"></div>
-                            <div class="my-2"></div><a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSfFFkjrDA4pDaop_q-ecj1VSagbFDwlGn-ED8NyRieP8no-yQ/viewform">Membership</a>
+                            <div class=s"my-2"></div><a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSfFFkjrDA4pDaop_q-ecj1VSagbFDwlGn-ED8NyRieP8no-yQ/viewform">Membership</a>
                         </form>
                     </div>
                 </div>
@@ -45,6 +46,29 @@
             </div>
         </div>
     </header>
+
+    <br>
+
+    <header class="bg-primary-gradient">
+        <div class="container py-5">
+            <div class="row py-5">
+                <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-end mb-4">
+                    <div style="max-width: 450px;">
+                        <p class="fw-bold text-success mb-2">~ Together we can ~</p>
+                        <h2 class="fw-bold">Upcoming Events &nbsp;</h2>
+                        <p class="my-3">Mothers Heart Foundation Presents its First ever Dual Outreach project </p>
+                        <form class="d-flex justify-content-center flex-wrap justify-content-md-start flex-lg-nowrap" method="post">
+                            <p style="font-size:20px; color:blue"><a href="#">Read more</p>
+                       </form>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;"><img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/poster3.jpeg" width="240" height="300"></div>
+                </div>
+            </div>
+        </div>
+    </header>
+    
     <section></section>
     <section></section>
     <section class="py-5">
