--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <p class="fw-bold text-success mb-2">~ Together we can ~</p>
                         <h2 class="fw-bold">Mothers Heart Foundation&nbsp;</h2>
                         <p class="my-3">A charitable organization aimed at helping vulnerable children especially the girl child. </p>
-                        <a href="MotherHeartOrphanage.html"><p class="fw-bold text-success mb-2">Click to view Mothers Heart Foundation Orphanage</p> </a>
+                        <a href="MotherHeartOrphanage.html"><p class="fw-bold text-success mb-2">Click to view Mothers Heart Orphanage</p> </a>
                         <form class="d-flex justify-content-center flex-wrap justify-content-md-start flex-lg-nowrap" method="post">
                             <div class="my-2 me-2"></div>
                             <div class=s"my-2"></div><a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSfFFkjrDA4pDaop_q-ecj1VSagbFDwlGn-ED8NyRieP8no-yQ/viewform">Membership</a>
