--- a/MothersHeartOrphanage.html
+++ b/MothersHeartOrphanage.html
@@ -30,8 +30,8 @@
                 <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-end mb-4">
                     <div style="max-width: 450px;">
                         <p class="fw-bold text-success mb-2">~ Together we can ~</p>
-                        <h2 class="fw-bold">Mothers Foundation Orphanage &nbsp;</h2>
-                        <p class="my-3">Mothers Heart Foundation Presents its First ever Dual Outreach project </p>
+                        <h2 class="fw-bold">Mothers Heart Orphanage &nbsp;</h2>
+                      
                         <form class="d-flex justify-content-center flex-wrap justify-content-md-start flex-lg-nowrap" method="post">
                             <div class=s"my-2"></div><a class="btn btn-primary shadow" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSfFFkjrDA4pDaop_q-ecj1VSagbFDwlGn-ED8NyRieP8no-yQ/viewform">Partnership</a>
                        </form>
