--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;"><img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/poster3.jpeg" width="240" height="300"></div>
+                    <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;">
+                        <img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/kalingalinga outreach.jpeg" width="240" height="300"></div>
                 </div>
             </div>
         </div>
