--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div style="max-width: 450px;">
                         <p class="fw-bold text-success mb-2">~ Together we can ~</p>
                         <h2 class="fw-bold">Upcoming Events &nbsp;</h2>
-                        <p class="my-3">Mothers Heart Foundation Presents its First ever Dual Outreach project </p>
+                        <p class="my-3">Mothers Heart Foundation Presents Kalingalinga Outreach program</p>
                         <form class="d-flex justify-content-center flex-wrap justify-content-md-start flex-lg-nowrap" method="post">
                             <p style="font-size:20px; color:blue"><a href="MothersHeartOrphanage.html">Read more</p>
                        </form>
