--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div style="max-width: 450px;">
                         <p class="fw-bold text-success mb-2">~ Together we can ~</p>
                         <h2 class="fw-bold">Upcoming Events &nbsp;</h2>
-                        <p class="my-3">Mothers Heart Foundation Presents Kalingalinga Outreach program</p>
+                        <p class="my-3">Mothers Heart Foundation Presents <b>Chipata Compound Outreach <i>Lets feed 100 Children</i></b></p>
                         <form class="d-flex justify-content-center flex-wrap justify-content-md-start flex-lg-nowrap" method="post">
                             <p style="font-size:20px; color:blue"><a href="MothersHeartOrphanage.html">Read more</p>
                        </form>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;">
-                        <img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/kalingalinga outreach.jpg" width="240" height="300"></div>
+                        <img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/april11.jpg" width="240" height="300"></div>
                 </div>
             </div>
         </div>
