Kapisha temporal removal

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
 
     <br>
-
+<center>
     <header class="bg-primary-gradient">
         <div class="container py-5">
             <div class="row py-5">
@@ -79,14 +79,15 @@
                     <div class="bg-dark border rounded border-0 border-dark overflow-hidden">
                         <div class="row g-0">
                             <div class="col-md-6">
+                                
                                 <div class="text-white p-4 p-md-5"><a href="projects.html" style="font-size: 30px;"><strong><span style="color: rgb(239, 240, 241);">RECENT EVENTS</span></strong><br></a>
-                                    <p class="mb-4">Highlights of the Kapisha Outreach in Chingola in 29th March, 2024.</p>
+                                    <!--<p class="mb-4">Highlights of the Kapisha Outreach in Chingola in 29th March, 2024.</p>
                                     <div class="my-3"></div><img src="assets/img/IMG-20240331-WA0000.jpg" width="502" height="320" style="width: 490px;height: 360px;">
                                 </div>
                             </div>
                             <div class="col-md-6 order-first order-md-last" style="min-height: 250px;"><img src="assets/img/IMG-20240331-WA0010.jpg" style="width: 540px;height: 410px;" width="560" height="480"><img src="assets/img/hero2.jpg" style="width: 190px;height: 150px;padding-left: 3px;margin-top: 19px;margin-left: 31px;"><img src="assets/img/IMG-20240331-WA0014.jpg" style="width: 190px;height: 150px;margin-right: 251px;padding-left: 0px;padding-right: 0px;margin-top: -172px;margin-left: 257px;padding-top: 0px;"></div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </section>
         </section>
@@ -156,6 +157,7 @@
             </div>
         </div>
     </section>
+</center>
     <section class="py-5">
         <footer class="text-center bg-dark">
             <div class="container text-white py-4 py-lg-5">
