Projects page update

--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,20 @@
     <br>
     <h1><center><b><i><p><u>RECENT AND UPCOMING PROJECTS</u></p></i></b></center></h1>
     
+    <div class="container py-4 py-xl-5">
+        <div class="row gy-4 gy-md-0">
+            <div class="col-md-6">
+                <div class="p-xl-5 m-xl-5"><img src="assets/img/april11.jpg" width="240" height="300" style="width: 400px;height: 330px;"></div>
+            </div>
+            <div class="col-md-6 d-md-flex align-items-md-center">
+                <div style="max-width: 350px;">
+                    <h2 class="text-uppercase fw-bold">Chipata Compound Lets feed 100 Children</h2>
+                    <p class="my-3">Feed a child program<br>&nbsp; &nbsp; &nbsp; &nbsp; <strong>MHF Lusaka Team.</strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLSfFFkjrDA4pDaop_q-ecj1VSagbFDwlGn-ED8NyRieP8no-yQ/viewform">Donate</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer class="bg-primary-gradient">
         <div class="container py-4 py-xl-5">
             <div class="row gy-4 gy-md-0">
