--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="fw-bold mb-0">Email</h6>
-                                <p class="text-muted mb-0">motherheart01@gmail.com</p>
+                                <p class="text-muted mb-0">mothersheartfoundation01@gmail.com</p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center p-3">
